Adding Button component, Input, ListTodo and Todo components

--- a/src/index.scss
+++ b/src/index.scss
@@ -5,6 +5,6 @@ body {
   height: 100%;
   padding: 0;
   margin: 0;
-  background-color: #C2185B;
+  background-color: $bg;
   font-family: 'Roboto','Helvetica','Arial',sans-serif!important;
 }
