--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -6,7 +6,23 @@ p {
   text-transform: uppercase;
   line-height: 64px;
   padding: 0 16px;
-  color: #fff;
+  color: #4A4141;
   box-sizing: border-box;
   border-bottom: 3px solid transparent;
+}
+.title{
+  font-family: 'Amatic SC', cursive;
+  font-size: 70px;
+  padding: 0;
+  margin: 0 0 30px 0;
+}
+.container{
+  width: 400px;
+  margin-top: 50px;
+  padding: 50px;
+  background: #ecf0f1;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  box-shadow: 0 25px 23px 0 rgba(0,0,0,.14),0 3px 1px -6px rgba(0,3,0,.2),0 1px 5px 0 rgba(0,0,0,.12);
 }
