--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -1,32 +1,34 @@
-@import "../theme";
+@import '../theme';
 
 p {
-  font-weight: 500;
+  border-bottom: 3px solid transparent;
+  box-sizing: border-box;
+  color: #4A4141;
   font-size: 13px;
-  text-transform: uppercase;
+  font-weight: 500;
   line-height: 64px;
   padding: 0 16px;
-  color: #4A4141;
-  box-sizing: border-box;
-  border-bottom: 3px solid transparent;
+  text-transform: uppercase;
+  &:hover {
+    background: #EFE8E8;
+    cursor: pointer;
+  }
 }
-p:hover{
-  background: #EFE8E8;
-  cursor: pointer;
-}
-.title{
+
+.title {
   font-family: 'Amatic SC', cursive;
   font-size: 70px;
+  margin: 0 0 30px;
   padding: 0;
-  margin: 0 0 30px 0;
 }
-.container{
-  width: 400px;
-  margin-top: 50px;
-  padding: 50px;
+
+.container {
   background: #ecf0f1;
+  box-shadow: 0 25px 23px 0 rgba(0,0,0,.14),0 3px 1px -6px rgba(0,3,0,.2),0 1px 5px 0 rgba(0,0,0,.12);
   margin-left: auto;
   margin-right: auto;
+  margin-top: 50px;
+  padding: 50px;
   text-align: center;
-  box-shadow: 0 25px 23px 0 rgba(0,0,0,.14),0 3px 1px -6px rgba(0,3,0,.2),0 1px 5px 0 rgba(0,0,0,.12);
+  width: 400px;
 }
